--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <link rel="icon" href="./public/logo/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Huyndai Gia Lai</title>
   </head>
   <body>
     <div id="root"></div>
