--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -8,7 +8,30 @@
       href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
-    <meta name="google-site-verification" content="915agiOJYOZ8yq2PHnFjrSjn1J4Z0CdnMoG0O2bKNbc" />
+    <!-- Open Graph -->
+    <meta property="og:site_name" content="Hyundai Gia Lai" />
+    <meta
+      property="og:title"
+      content="Hyundai Gia Lai - Đại lý chính hãng, xe mới nhất"
+    />
+    <meta
+      property="og:description"
+      content="Hyundai Gia Lai - Đại lý ủy quyền chính thức. Cung cấp các mẫu xe Hyundai mới nhất, dịch vụ chuyên nghiệp, giá ưu đãi, hỗ trợ trả góp."
+    />
+    <meta
+      property="og:image"
+      content="https://www.hyundaigialaiofficial.com.vn/images/fb.jpg"
+    />
+    <meta
+      property="og:url"
+      content="https://www.hyundaigialaiofficial.com.vn/"
+    />
+    <meta property="og:type" content="website" />
+
+    <meta
+      name="google-site-verification"
+      content="915agiOJYOZ8yq2PHnFjrSjn1J4Z0CdnMoG0O2bKNbc"
+    />
     <link rel="icon" href="./images/logo/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hyundai Gia Lai</title>
