--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     />
     <meta
       property="og:image"
-      content="https://www.hyundaigialaiofficial.com.vn/images/fb.jpg"
+      content="https://www.hyundaigialaiofficial.com.vn/images/news/fb.jpg"
     />
     <meta
       property="og:url"
