--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     />
     <link rel="icon" href="./images/logo/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hyundai Gia Lai</title>
+    <title>Hyundai Gia Lai - Showroom Xe Hyundai Chính Hãng</title>
   </head>
   <body>
     <div id="root"></div>
