--- a/index.html
+++ b/index.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="vi">
   <head>
     <meta charset="UTF-8" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@100;200;300;400;500;600;700;800;900&display=swap"
       rel="stylesheet"
     />
+
+    <!-- Meta viewport -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Hyundai Gia Lai - Showroom Xe Hyundai Chính Hãng</title>
+
+    <!-- Favicon -->
+    <link rel="icon" href="/images/logo/favicon.ico" />
+
     <!-- Open Graph -->
     <meta property="og:site_name" content="Hyundai Gia Lai" />
     <meta
@@ -28,13 +36,75 @@
     />
     <meta property="og:type" content="website" />
 
+    <!-- Google Site Verification -->
     <meta
       name="google-site-verification"
       content="915agiOJYOZ8yq2PHnFjrSjn1J4Z0CdnMoG0O2bKNbc"
     />
-    <link rel="icon" href="./images/logo/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hyundai Gia Lai - Showroom Xe Hyundai Chính Hãng</title>
+
+    <!-- Structured Data: LocalBusiness -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "LocalBusiness",
+        "name": "Hyundai Gia Lai",
+        "image": "https://www.hyundaigialaiofficial.com.vn/images/logo/logo.png",
+        "@id": "https://www.hyundaigialaiofficial.com.vn",
+        "url": "https://www.hyundaigialaiofficial.com.vn",
+        "telephone": "+84-981-543-342",
+        "email": "hyundaigialaiofficial@gmail.com",
+        "address": {
+          "@type": "PostalAddress",
+          "streetAddress": "278 Lê Duẩn, Phường An Phú",
+          "addressLocality": "Pleiku",
+          "addressRegion": "Gia Lai",
+          "addressCountry": "VN"
+        },
+        "openingHoursSpecification": [
+          {
+            "@type": "OpeningHoursSpecification",
+            "dayOfWeek": [
+              "Monday",
+              "Tuesday",
+              "Wednesday",
+              "Thursday",
+              "Friday",
+              "Saturday",
+              "Sunday"
+            ],
+            "opens": "08:00",
+            "closes": "18:00"
+          }
+        ],
+        "logo": "https://www.hyundaigialaiofficial.com.vn/images/logo/logo.png",
+        "sameAs": [
+          "https://www.facebook.com/HyundaiGiaLai",
+          "https://www.youtube.com/@HyundaiGiaLai"
+        ]
+      }
+    </script>
+
+    <!-- Structured Data: Organization -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "Hyundai Gia Lai",
+        "url": "https://www.hyundaigialaiofficial.com.vn",
+        "logo": "https://www.hyundaigialaiofficial.com.vn/images/logo/logo.png",
+        "sameAs": [
+          "https://www.facebook.com/HyundaiGiaLai",
+          "https://www.youtube.com/@HyundaiGiaLai"
+        ],
+        "contactPoint": {
+          "@type": "ContactPoint",
+          "telephone": "+84-981-543-342",
+          "contactType": "customer service",
+          "areaServed": "VN",
+          "availableLanguage": ["Vietnamese", "English"]
+        }
+      }
+    </script>
   </head>
   <body>
     <div id="root"></div>
