--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         "@context": "https://schema.org",
         "@type": "LocalBusiness",
         "name": "Hyundai Gia Lai",
-        "image": "https://www.hyundaigialaiofficial.com.vn/images/logo/logo.png",
+        "image": "https://www.hyundaigialaiofficial.com.vn/images/logo/favicon.ico",
         "@id": "https://www.hyundaigialaiofficial.com.vn",
         "url": "https://www.hyundaigialaiofficial.com.vn",
         "telephone": "+84-981-543-342",
@@ -76,7 +76,7 @@
             "closes": "18:00"
           }
         ],
-        "logo": "https://www.hyundaigialaiofficial.com.vn/images/logo/logo.png",
+        "logo": "https://www.hyundaigialaiofficial.com.vn/images/logo/favicon.ico",
         "sameAs": [
           "https://www.facebook.com/HyundaiGiaLai",
           "https://www.youtube.com/@HyundaiGiaLai"
@@ -91,7 +91,7 @@
         "@type": "Organization",
         "name": "Hyundai Gia Lai",
         "url": "https://www.hyundaigialaiofficial.com.vn",
-        "logo": "https://www.hyundaigialaiofficial.com.vn/images/logo/logo.png",
+        "logo": "https://www.hyundaigialaiofficial.com.vn/images/logo/favicon.ico",
         "sameAs": [
           "https://www.facebook.com/HyundaiGiaLai",
           "https://www.youtube.com/@HyundaiGiaLai"
