--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         "@context": "https://schema.org",
         "@type": "LocalBusiness",
         "name": "Hyundai Gia Lai",
-        "image": "https://www.hyundaigialaiofficial.com.vn/images/logo/favicon.ico",
+        "image": "https://www.hyundaigialaiofficial.com.vn/icon192x192.png",
         "@id": "https://www.hyundaigialaiofficial.com.vn",
         "url": "https://www.hyundaigialaiofficial.com.vn",
         "telephone": "+84-981-543-342",
