--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             "closes": "18:00"
           }
         ],
-        "logo": "https://www.hyundaigialaiofficial.com.vn/images/logo/favicon.ico",
+        "logo": "https://www.hyundaigialaiofficial.com.vn/icon192x192.png",
         "sameAs": [
           "https://www.facebook.com/HyundaiGiaLai",
           "https://www.youtube.com/@HyundaiGiaLai"
@@ -91,7 +91,7 @@
         "@type": "Organization",
         "name": "Hyundai Gia Lai",
         "url": "https://www.hyundaigialaiofficial.com.vn",
-        "logo": "https://www.hyundaigialaiofficial.com.vn/images/logo/favicon.ico",
+        "logo": "https://www.hyundaigialaiofficial.com.vn/icon192x192.png",
         "sameAs": [
           "https://www.facebook.com/HyundaiGiaLai",
           "https://www.youtube.com/@HyundaiGiaLai"
