update logo again

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>Hyundai Gia Lai - Showroom Xe Hyundai Chính Hãng</title>
 
     <!-- Favicon -->
-    <link rel="icon" type="image/x-icon" href="/favicon.ico" sizes="any">
+    <link rel="icon" type="image/png" href="/icon192x192.png" sizes="any">
 
     <!-- Open Graph -->
     <meta property="og:site_name" content="Hyundai Gia Lai" />
