--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
       href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@100;200;300;400;500;600;700;800;900&display=swap"
       rel="stylesheet"
     />
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-17579552708"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'AW-17579552708');
+</script>
     <!-- Meta viewport -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hyundai Gia Lai - Showroom Xe Hyundai Chính Hãng</title>
