--- a/index.html
+++ b/index.html
@@ -146,6 +146,10 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
       }
     </script>
   </head>
+  <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NCR9WT7G"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
