update url for search gg

--- a/index.html
+++ b/index.html
@@ -52,7 +52,11 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
     <!-- Meta viewport -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hyundai Gia Lai - Showroom Xe Hyundai Chính Hãng</title>
-
+    <meta
+      name="description"
+      content="Hyundai Gia Lai cung cấp đầy đủ các dòng xe Hyundai mới nhất, bảng giá niêm yết và ưu đãi trả góp, kèm dịch vụ bảo dưỡng chính hãng tại Gia Lai."
+    />
+    <link rel="canonical" href="https://hyundaigialaiofficial.com.vn/" />
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="/icon192x192.png" sizes="any" />
 
@@ -60,19 +64,19 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
     <meta property="og:site_name" content="Hyundai Gia Lai" />
     <meta
       property="og:title"
-      content="Hyundai Gia Lai - Đại lý chính hãng, xe mới nhất"
+      content="Hyundai Gia Lai - Đại lý Hyundai chính hãng | Giá xe Hyundai mới nhất 2025"
     />
     <meta
       property="og:description"
-      content="Hyundai Gia Lai - Đại lý ủy quyền chính thức. Cung cấp các mẫu xe Hyundai mới nhất, dịch vụ chuyên nghiệp, giá ưu đãi, hỗ trợ trả góp."
+      content="Đại lý Hyundai chính hãng tại Pleiku. Giá xe Hyundai 2025, khuyến mãi, lái thử, trả góp. Gọi 0981 543 342."
     />
     <meta
       property="og:image"
-      content="https://www.hyundaigialaiofficial.com.vn/images/news/fb.jpg"
+      content="https://hyundaigialaiofficial.com.vn/images/news/fb.jpg"
     />
     <meta
       property="og:url"
-      content="https://www.hyundaigialaiofficial.com.vn/"
+      content="https://hyundaigialaiofficial.com.vn/"
     />
     <meta property="og:type" content="website" />
 
@@ -88,9 +92,9 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
         "@context": "https://schema.org",
         "@type": "LocalBusiness",
         "name": "Hyundai Gia Lai",
-        "image": "https://www.hyundaigialaiofficial.com.vn/icon192x192.png",
-        "@id": "https://www.hyundaigialaiofficial.com.vn",
-        "url": "https://www.hyundaigialaiofficial.com.vn",
+        "image": "https://hyundaigialaiofficial.com.vn/icon192x192.png",
+        "@id": "https://hyundaigialaiofficial.com.vn",
+        "url": "https://hyundaigialaiofficial.com.vn",
         "telephone": "+84-981-543-342",
         "email": "hyundaigialaiofficial@gmail.com",
         "address": {
@@ -116,7 +120,7 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
             "closes": "18:00"
           }
         ],
-        "logo": "https://www.hyundaigialaiofficial.com.vn/icon192x192.png",
+        "logo": "https://hyundaigialaiofficial.com.vn/icon192x192.png",
         "sameAs": [
           "https://www.facebook.com/HyundaiGiaLai",
           "https://www.youtube.com/@HyundaiGiaLai"
@@ -130,8 +134,8 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
         "@context": "https://schema.org",
         "@type": "Organization",
         "name": "Hyundai Gia Lai",
-        "url": "https://www.hyundaigialaiofficial.com.vn",
-        "logo": "https://www.hyundaigialaiofficial.com.vn/icon192x192.png",
+        "url": "https://hyundaigialaiofficial.com.vn",
+        "logo": "https://hyundaigialaiofficial.com.vn/icon192x192.png",
         "sameAs": [
           "https://www.facebook.com/HyundaiGiaLai",
           "https://www.youtube.com/@HyundaiGiaLai"
@@ -152,6 +156,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
   <body>
     <div id="root"></div>
+    
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
