update robot and sitemap

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
       name="description"
       content="Hyundai Gia Lai cung cấp đầy đủ các dòng xe Hyundai mới nhất, bảng giá niêm yết và ưu đãi trả góp, kèm dịch vụ bảo dưỡng chính hãng tại Gia Lai."
     />
-    <link rel="canonical" href="https://hyundaigialaiofficial.com.vn/" />
+    <link rel="canonical" href="https://www.hyundaigialaiofficial.com.vn/" />
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="/icon192x192.png" sizes="any" />
 
@@ -72,11 +72,11 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
     />
     <meta
       property="og:image"
-      content="https://hyundaigialaiofficial.com.vn/images/news/fb.jpg"
+      content="https://www.hyundaigialaiofficial.com.vn/images/news/fb.jpg"
     />
     <meta
       property="og:url"
-      content="https://hyundaigialaiofficial.com.vn/"
+      content="https://www.hyundaigialaiofficial.com.vn/"
     />
     <meta property="og:type" content="website" />
 
@@ -92,9 +92,9 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
         "@context": "https://schema.org",
         "@type": "LocalBusiness",
         "name": "Hyundai Gia Lai",
-        "image": "https://hyundaigialaiofficial.com.vn/icon192x192.png",
-        "@id": "https://hyundaigialaiofficial.com.vn",
-        "url": "https://hyundaigialaiofficial.com.vn",
+        "image": "https://www.hyundaigialaiofficial.com.vn/icon192x192.png",
+        "@id": "https://www.hyundaigialaiofficial.com.vn",
+        "url": "https://www.hyundaigialaiofficial.com.vn",
         "telephone": "+84-981-543-342",
         "email": "hyundaigialaiofficial@gmail.com",
         "address": {
@@ -120,7 +120,7 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
             "closes": "18:00"
           }
         ],
-        "logo": "https://hyundaigialaiofficial.com.vn/icon192x192.png",
+        "logo": "https://www.hyundaigialaiofficial.com.vn/icon192x192.png",
         "sameAs": [
           "https://www.facebook.com/HyundaiGiaLai",
           "https://www.youtube.com/@HyundaiGiaLai"
@@ -134,8 +134,8 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
         "@context": "https://schema.org",
         "@type": "Organization",
         "name": "Hyundai Gia Lai",
-        "url": "https://hyundaigialaiofficial.com.vn",
-        "logo": "https://hyundaigialaiofficial.com.vn/icon192x192.png",
+        "url": "https://www.hyundaigialaiofficial.com.vn",
+        "logo": "https://www.hyundaigialaiofficial.com.vn/icon192x192.png",
         "sameAs": [
           "https://www.facebook.com/HyundaiGiaLai",
           "https://www.youtube.com/@HyundaiGiaLai"
