--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
       content="Hyundai Gia Lai cung cấp đầy đủ các dòng xe Hyundai mới nhất, bảng giá niêm yết và ưu đãi trả góp, kèm dịch vụ bảo dưỡng chính hãng tại Gia Lai."
     />
     <meta name="robots" content="index, follow" />
-    <link rel="canonical" href="https://www.hyundaigialaiofficial.com.vn/" />
+    <link rel="canonical" href="https://hyundaigialaiofficial.com.vn/" />
     <!-- Favicon -->
 
     <script>
@@ -69,7 +69,7 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
           return;
         }
 
-        var preferredHost = "www.hyundaigialaiofficial.com.vn";
+        var preferredHost = "hyundaigialaiofficial.com.vn";
         var protocol = "https:";
 
         if (host !== preferredHost) {
@@ -118,11 +118,11 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
     />
     <meta
       property="og:image"
-      content="https://www.hyundaigialaiofficial.com.vn/images/news/fb.jpg"
+      content="https://hyundaigialaiofficial.com.vn/images/news/fb.jpg"
     />
     <meta
       property="og:url"
-      content="https://www.hyundaigialaiofficial.com.vn/"
+      content="https://hyundaigialaiofficial.com.vn/"
     />
     <meta property="og:type" content="website" />
 
@@ -138,9 +138,9 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
         "@context": "https://schema.org",
         "@type": "LocalBusiness",
         "name": "Hyundai Gia Lai",
-        "image": "https://www.hyundaigialaiofficial.com.vn/icon192x192.png",
-        "@id": "https://www.hyundaigialaiofficial.com.vn",
-        "url": "https://www.hyundaigialaiofficial.com.vn",
+        "image": "https://hyundaigialaiofficial.com.vn/icon192x192.png",
+        "@id": "https://hyundaigialaiofficial.com.vn",
+        "url": "https://hyundaigialaiofficial.com.vn",
         "telephone": "+84-981-543-342",
         "email": "hyundaigialaiofficial@gmail.com",
         "address": {
@@ -166,10 +166,10 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
             "closes": "18:00"
           }
         ],
-        "logo": "https://www.hyundaigialaiofficial.com.vn/icon192x192.png",
+        "logo": "https://hyundaigialaiofficial.com.vn/icon192x192.png",
         "sameAs": [
-          "https://www.facebook.com/HyundaiGiaLai",
-          "https://www.youtube.com/@HyundaiGiaLai"
+          "https://hyundaigialaiofficial.com.vn/facebook.com/HyundaiGiaLai",
+          "https://hyundaigialaiofficial.com.vn/youtube.com/@HyundaiGiaLai"
         ]
       }
     </script>
@@ -180,8 +180,8 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
         "@context": "https://schema.org",
         "@type": "Organization",
         "name": "Hyundai Gia Lai",
-        "url": "https://www.hyundaigialaiofficial.com.vn",
-        "logo": "https://www.hyundaigialaiofficial.com.vn/icon192x192.png",
+        "url": "https://hyundaigialaiofficial.com.vn",
+        "logo": "https://hyundaigialaiofficial.com.vn/icon192x192.png",
         "sameAs": [
           "https://www.facebook.com/HyundaiGiaLai",
           "https://www.youtube.com/@HyundaiGiaLai"
