--- a/index.html
+++ b/index.html
@@ -2,12 +2,19 @@
 <html lang="vi">
   <head>
     <!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-NCR9WT7G');</script>
-<!-- End Google Tag Manager -->
+    <script>
+      (function (w, d, s, l, i) {
+        w[l] = w[l] || [];
+        w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
+        var f = d.getElementsByTagName(s)[0],
+          j = d.createElement(s),
+          dl = l != "dataLayer" ? "&l=" + l : "";
+        j.async = true;
+        j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
+        f.parentNode.insertBefore(j, f);
+      })(window, document, "script", "dataLayer", "GTM-NCR9WT7G");
+    </script>
+    <!-- End Google Tag Manager -->
     <meta charset="UTF-8" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -88,13 +95,11 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
         if (!canonicalLink) {
           canonicalLink = document.createElement("link");
           canonicalLink.setAttribute("rel", "canonical");
-          document.head.appendChild(canonicalLink); 
+          document.head.appendChild(canonicalLink);
         }
 
         var path = window.location.pathname || "/";
-        var normalizedPath = path === "/"
-          ? "/"
-          : path.replace(/\/+$/, "");
+        var normalizedPath = path === "/" ? "/" : path.replace(/\/+$/, "");
         var canonicalUrl = protocol + "//" + preferredHost + normalizedPath;
         canonicalLink.setAttribute("href", canonicalUrl);
 
@@ -120,10 +125,7 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
       property="og:image"
       content="https://hyundaigialaiofficial.com.vn/images/news/fb.jpg"
     />
-    <meta
-      property="og:url"
-      content="https://hyundaigialaiofficial.com.vn/"
-    />
+    <meta property="og:url" content="https://hyundaigialaiofficial.com.vn/" />
     <meta property="og:type" content="website" />
 
     <!-- Google Site Verification -->
@@ -168,8 +170,8 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
         ],
         "logo": "https://hyundaigialaiofficial.com.vn/icon192x192.png",
         "sameAs": [
-          "https://hyundaigialaiofficial.com.vn/facebook.com/HyundaiGiaLai",
-          "https://hyundaigialaiofficial.com.vn/youtube.com/@HyundaiGiaLai"
+          "https://www.facebook.com/HyundaiGiaLai",
+          "https://www.youtube.com/@HyundaiGiaLai"
         ]
       }
     </script>
@@ -197,12 +199,18 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
     </script>
   </head>
   <!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NCR9WT7G"
-height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-<!-- End Google Tag Manager (noscript) -->
+  <noscript
+    ><iframe
+      src="https://www.googletagmanager.com/ns.html?id=GTM-NCR9WT7G"
+      height="0"
+      width="0"
+      style="display: none; visibility: hidden"
+    ></iframe
+  ></noscript>
+  <!-- End Google Tag Manager (noscript) -->
   <body>
     <div id="root"></div>
-    
+
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
